# datapunk

./: .gitignore  README.md  pyproject.toml  run_benchmark.py
.github/workflows/: build.yml
datapunk/: config.py  dataio.py  fingerprint.py  reporter.py  runner.py  worker.py
docs/: benchmark_results.json  index.html
notebooks/: 01_High-Value_Fleet_Analysis.ipynb  02_Temporal_Demand_Revenue_Aggregation.ipynb  03_Regional_Revenue_Distribution.ipynb  04_Consumer_Behavioral_Profiling.ipynb  05_Financial_Event_Sequencing.ipynb
public/: benchmark_results.json  index.html
