[project]
name = "datapunk"
version = "0.1.0"
description = 'Datapunk is the "Cyberpunk 2077" of data analytics: a benchmark suite for data engines with real-world workloads'
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudpickle>=3.1.0",
    "daft>=0.7.15",
    "dask>=2026.6.0",
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "nbconvert>=7.17.1",
    "plotly>=6.8.0",
    "tabulate>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datapunk"]
